@@ -1,3 +1,7 @@
+2008-05-23  Neal H. Walfield  <neal@gnu.org>
+
+	* ager.c (ager_loop): Don't flush shared pages, only unmap them.
+
 2008-05-21  Neal H. Walfield  <neal@gnu.org>
 
 	* object.c (folio_object_alloc): Use the strong variant of TYPE.
